feat: add login and create new user
